@@ -1,3 +1,12 @@
+2005-07-05  Mark Wielaard  <mark@klomp.org>
+
+	* include/Makefile.am (GTKPEER_H_FILES): Removed GtkTextComponentPeer.
+	* include/gnu_java_awt_peer_gtk_GtkTextComponentPeer.h: Removed.
+	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
+	(classpath_gtk_component_connect_nonfocus_signals): Mark argument
+	unused.
+	(classpath_gtk_component_connect_signals): Likewise.
+
 2005-07-04  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (postTextEvent): New
